styling: fix ErrorResult and Ball not centered

--- a/client/src/Ball.module.css
+++ b/client/src/Ball.module.css
@@ -28,6 +28,7 @@
 .centered {
     display: flex;
     justify-content: center;
+    margin: 0 auto;
 }
 
 .preloader {
